# clash-android

./: .editorconfig  .gitignore  README.md  RESUME_ZH.md  build.gradle.kts  flake.nix  gradle.properties  settings.gradle.kts  test_result  test_unsafe
.github/: cliff.toml  dependabot.yml
.github/scripts/: fix-ndk-libgcc.sh
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/rs/clash/android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/rs/clash/android/: App.kt  AppScreen.kt  ClashApi.kt  ClashRsVpnService.kt  Global.kt  MainActivity.kt  MyVpnService.kt  TunService.kt  Util.kt
app/src/main/java/rs/clash/android/model/: Profile.kt
app/src/main/java/rs/clash/android/service/: CoreToggleTileService.kt  TunService.kt
app/src/main/java/rs/clash/android/theme/: Color.kt  NavigationAnimations.kt  Theme.kt  Type.kt
app/src/main/java/rs/clash/android/ui/: AppSelectorScreen.kt  BottomBar.kt  ConnectionsScreen.kt  HomeScreen.kt  LogScreen.kt  LogsScreen.kt  NavigationAnimations.kt  PanelScreen.kt  ProfileScreen.kt  SettingsScreen.kt  TitleBar.kt
app/src/main/java/rs/clash/android/ui/components/: BottomBar.kt  ConnectionItem.kt  ProfileCard.kt  StatsCard.kt  TextInfoDialog.kt  TitleBar.kt
app/src/main/java/rs/clash/android/ui/snackbar/: SnackbarAction.kt  SnackbarChannelMessage.kt  SnackbarController.kt  SnackbarControllerProvider.kt
app/src/main/java/rs/clash/android/util/: NotificationHelper.kt  PermissionHelper.kt
app/src/main/java/rs/clash/android/viewmodel/: ConnectionsViewModel.kt  HomeViewModel.kt  LogViewModel.kt  LogsViewModel.kt  ProfileViewModel.kt  SettingsViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/rs/clash/android/: ExampleUnitTest.kt
core/: .gitignore  build.gradle.kts
core/src/main/java/rs/clash/android/: Test.kt
core/src/main/java/rs/clash/android/ffi/: JNI.kt  Lib.kt  Test.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
uniffi/: Cargo.toml  rust-toolchain.toml
uniffi/.cargo/: config.toml
uniffi/clash-android-ffi/: Cargo.toml  build.rs  uniffi.toml
uniffi/clash-android-ffi/src/: clash.udl  controller.rs  lib.rs  log.rs  log_buffer.rs  mimalloc.rs  util.rs
uniffi/uniffi-bindgen/: Cargo.toml
