[workspace]

members = [
    "clash-android-ffi",
    "uniffi-bindgen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
uniffi = { version = "0.30", features = ["tokio"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package.backtrace]
opt-level = 3