[package]
name = "clash-android-ffi"
version.workspace = true
edition.workspace = true

[features]
tokio-console = []
ffi-trace = ["uniffi/ffi-trace"]

[dependencies]
uniffi.workspace = true

eyre = "0.6"
thiserror = "2"

tokio = "1"

tracing = "0.1"
time = { version = "0.3", features = ["macros", "local-offset"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt"]}
paranoid-android = "0.2"
color-eyre = "0.6"

clash-lib = { package = "clash-lib", path = "../../../clash-rs/clash-lib", features = [
    "tuic", 
    #"shadowquic",
    "shadowsocks",
    "tun",
    "wireguard",
    "ring"], default-features = false }

ipnet = "2"
jni = "0.21"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lib]
crate-type = ["cdylib", "lib"]

