[package]
name = "clash-android-ffi"
version.workspace = true
edition.workspace = true

## https://github.com/matrix-org/matrix-rust-sdk/blob/main/bindings/matrix-sdk-ffi/Cargo.toml

[lib]
crate-type = ["cdylib"]

[features]
tokio-console = []
ffi-trace = ["uniffi/ffi-trace"]

[dependencies]
uniffi.workspace = true

eyre = "0.6"
tokio = "1"
async-compat.workspace = true
once_cell = "1"

# Logging
tracing = "0.1"
tracing-error = "0.2"
time = { version = "0.3", features = ["macros", "local-offset"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt"]}
paranoid-android = "0.2"
color-eyre = "0.6"

ipnet = "2"
jni = "0.21"

# HTTP client dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
http-body-util = "0.1"
hyperlocal = "0.9"
urlencoding = "2"

[dependencies.clash-lib]
package = "clash-lib"
branch = "fix/group-latency"
git = "https://github.com/Watfaq/clash-rs.git"
#path = "../../../clash-rs/clash-lib"
features = [
    "tuic", 
    "shadowquic",
    "shadowsocks",
    "tun",
    "wireguard",
    "ring"
]
default-features = false

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

